<resources>
    <string name="app_name">Iyyappan</string>
	<string name="navigation_drawer_open">Open</string>
	<string name="navigation_drawer_close">Close</string>
    <string name="app_name_header">ஐயப்பன்</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="banner_ad_1">ca-app-pub-1439926476174790/1608464528</string>
	<string name="banner_ad_2">ca-app-pub-1439926476174790/6477647823</string>
	<string name="banner_ad_3">ca-app-pub-1439926476174790/1033749451</string>
	<string name="banner_ad_4">ca-app-pub-1439926476174790/5711361063</string>
	<string name="banner_ad_5">ca-app-pub-1439926476174790/9267462695</string>
	<string name="banner_ad_6">ca-app-pub-1439926476174790/7286212902</string>
	<string name="banner_ad_7">ca-app-pub-1439926476174790/5247917518</string>
	<string name="banner_ad_8">ca-app-pub-1439926476174790/8118032559</string>
	<string name="interid2">ca-app-pub-1439926476174790/6456346964</string>
    <string name="interid">ca-app-pub-1439926476174790/1587163661</string>
	<string name="fm">ஆன்மிக FM ரேடியோ</string>
	<string name="songs">பக்தி பாடல்கள்</string>
	<string name="songs_main_title">பக்தி பாடல்கள்</string>
	<string name="news">ஆன்மிக சிந்தனைகள்</string>
	<string name="gallery">ஐயப்பன் புகைப்படங்கள்</string>
    <string name="arupadai_veedugal">அறுபடை வீடுகள்</string>
    <string name="essay">தமிழ்க் கட்டுரைகள்</string>
    <string name="stories">கதைகள் &amp; கட்டுரைகள்</string>
    <string name="videos">சுவாரசியமான வீடியோக்கள்</string>
    <string name="kantha_puranam">கந்தர் சஷ்டி கவசம்</string>
    <string name="articles">ஆங்கில கட்டுரைகள்</string>
    <string name="thiruparakundram">திருப்பரங்குன்றம்</string>
    <string name="tiruchendur">திருச்செந்தூர்</string>
    <string name="palani">பழனி</string>
    <string name="swamimalai">சுவாமிமலை</string>
    <string name="thiruthanigai">திருத்தணிகை</string>
    <string name="palamuthirsolai">பழமுதிர்ச்சோலை</string>
    <string name="first">முதல்படை வீடு</string>
    <string name="second">இரண்டாம்படை வீடு</string>
    <string name="third">மூன்றாவது படை வீடு</string>
    <string name="fourth">நான்காவது படை வீடு</string>
    <string name="fifth">ஐந்தாவது படை வீடு</string>
    <string name="sixth">ஆறாவது படை வீடு</string>
    <string name="thiruparakundram_main_content">\t\t\t\t\tமுருகப்பெருமானின் அறுபடை வீடுகளில் முதலாவது படை வீடாகத் திகழ்வது திருப்பரங்குன்றம் ஸ்ரீ சுப்பிரமணிய சுவாமி திருக்கோயில். முருகப் பெருமான் தெய்வயானையை திருமணம் செய்து கொண்ட தலம்.

அறுபடை வீட்டு முருகப் பெருமான் கோயில்களில் இக்கோயில் அளவில் பெரியதாகும். லிங்க வடிவில் இருக்கும் இம்மலையைப் பற்றி சைவ சமயக் குரவர்களில் சுந்தரமூர்த்தி நாயனார், திருஞானசம்பந்தப் பெருமான் ஆகியோர் இவ்வூருக்கு வந்து ஆலய வழிபாடு செய்து பதிகங்கள் பல பாடியுள்ளனர் என்று அறியப்படுகிறது.

சங்ககாலப் புலவரான நக்கீரர் இத்தலத்து முருகப் பெருமானை வழிபட்டு தனது குறை நீக்கிக் கொண்ட திருத்தலம். இத்திருத்தலத்திற்கு இலக்கியங்களில் தண்பரங்குன்று, தென்பரங்குன்று, பரங்குன்று, பரங்கிரி, திருப்பரங்கிரி பரமசினம், சத்தியகிரி, கந்தமாதனம், கந்த மலை என பல்வேறு பெயர்கள் வழங்கப்படுகின்றன.</string>
    <string name="thiruparakundram_title1">அமைவிடம்</string>
    <string name="thiruparakundram_content1">\t\t\t\t\tதமிழ்நாட்டில் சிறப்புற்று விளங்குவது மதுரை மாநகர். இம்மாமதுரை நகரிலிருந்து தென்மேற்கில் தேசிய நெடுஞ்சாலை வழியே 9 கி.மீ. தொலைவில் அமைந்திருப்பது திருப்பரங்குன்றம் என்னும் திவ்வியத் தலமாகும். ரயில் வழியாகவும் இவ்வூரை அடையலாம். மதுரையிலிருந்து இத்திருத்தலத்திற்கு ஏராளமான நகரப் பேருந்துகள் செல்கின்றன. பேருந்து நிறுத்தம் கோயிலுக்கு அருகிலேயே உள்ளது.</string>
    <string name="thiruparakundram_title2">திருப்பரங்குன்றம் பெயர்க்காரணம்</string>
    <string name="thiruparakundram_content2">\t\t\t\t\tதிரு + பரம் + குன்றம். பரம் என்றால் பரம் பொருளான சிவபெருமான். குன்றம் என்றால் குன்று (மலை). திரு என்பது அதன் சிறப்பை உணர்த்தும் அடைமொழியாகத் திருப்பரங்குன்றம் என ஆயிற்று.</string>
    <string name="thiruparakundram_title3">லிங்க வடிவில் மலை</string>
    <string name="thiruparakundram_content3">\t\t\t\t\tதிருப்பரங்குன்றம் லிங்க வடிவமாகக் காட்சியளிக்கும் அருட் செறிந்த மலை. இந்தத் திருப்பரங்குன்றத்தில் தங்கி சிவசக்தியை நோக்கி ஆறுமுகப் பெருமான் தவமிருந்தார்.
\n\n
இக்குன்றமானது சிவலிங்க வடிவிலேயே காணப்படுவதால் சிவபெருமானே குன்றின் உருவில் காட்சியளிப்பதாக எல்லோராலும் வணங்கப்பட்டு வருகிறது. இம்மலையின் உயரம் சுமார் 190 மீட்டராகும். இம்மலையை நித்தம் வலம் வந்து வழிபட்டால் தொழுவாரின் வினைகளெல்லாம் தீர்ந்துவிடும் என்று திருஞான சம்பந்தர் தான் இயற்றிய தேவாரத்தில் பாடியுள்ளார்.
</string>
    <string name="thiruparakundram_title4">தவம் செய்த முருகப்பெருமான்</string>
    <string name="thiruparakundram_content4">\t\t\t\t\tகுரு பக்தியின்றி ஞானம் பெற முடியாது. கயிலாயத்தில் பார்வதி தேவிக்கு, சிவபெருமான் பிரணவ மந்திரத்தின் உட்பொருளை உபதேசிக்கும்போது, தன் தாயாரின் மடிமீது முருகப்பெருமான் அமர்ந்திருந்தார். தாய்க்கு தந்தையார், பிரணவ மந்திர உபதேசம் செய்தபோது முருகப்பெருமானும் அவ்வுபதேசத்தைக் கேட்டார்.
\n\n
புனிதமான மந்திரப் பொருளை குருவின் மூலமாகவே அறிந்து கொள்ளவேண்டும். மறைமுகமாக அறிந்து கொள்ளுதல் முறைமையாகாது. அது பாவம் என்று சாஸ்திரங்கள் கூறுகின்றன.
\n\n
எனவே முருகப்பெருமானே பிரணவ மந்திரத்தினை, அதன் உட்பொருளை பிரம்மதேவனுக்கு உபதேசித்த போதிலும், சிவபெருமானும், முருகப்பெருமானும் ஒருவரேயானாலும், உலக நியதிக்கு ஒட்டாத, சாஸ்திரங்கள் ஒப்பாத ஒரு காரியமாக அமைந்துவிட்டபடியால், இக்குற்றத்திற்குப் பரிகாரம் தேடி முருகப் பெருமான் திருப்பரங்குன்றத்திற்கு வந்து தவம் செய்தார்.</string>
    <string name="thiruparakundram_title5">காட்சி கொடுத்த சிவன்-பார்வதி</string>
    <string name="thiruparakundram_content5">\t\t\t\t\tகடைசியில், சிவபெருமானும், பார்வதி தேவியாரும் தோன்றி, முருகப் பெருமானுக்கு அங்குக் காட்சி தந்து அருளினார்கள். அவர்கள் இங்கு பரங்கிநாதர் என்றும், ஆவுடை நாயகி என்றும் பெயர் பெற்றார்கள்.
\n\n
அவர்களுடைய ஆலயம் இன்றும் திருப்பரங்குன்றத்தில் மீனாட்சி சுந்தரேஸ்வரர் ஆலயம் என்னும் பெயரில் வழங்கி வருகிறது. எனவே திருப்பரங்குன்றம் செல்லும் பக்தர்கள் முதலில் சிவன்-பார்வதியை தரிசனம் செய்த பிறகே முருகன் ஆலயத்திற்குச் செல்ல வேண்டுமென்பது ஐதீகம்.
\n\n
முருகப்பெருமானுக்கு சிவபெருமான் தை மாதத்தில் பூச நட்சத்திரத்தன்று காட்சித் தந்தார். எனவே தைப்பூசத்தன்று சிவபெருமானையும், முருகக் கடவுளையும் வழிபடுகின்றவர்கள் இஷ்ட சித்திகளைப் பெறுவார்கள் என்று கூறப்படுகிறது. எனவே திருப்பரங்குன்றத்தில் தைப்பூச விழா பத்து நாட்கள் சிறப்பாகக் கொண்டாடப்படுகிறது.</string>
    <string name="thiruparakundram_title6">அவதரித்ததன் நோக்கம்</string>
    <string name="thiruparakundram_content6">\t\t\t\t\tமுருகப்பெருமான் அவதாரம் செய்ததன் நோக்கமே சூரபத்மனையும், அவனது சேனைகளையும் அழித்து தேவர்களைக் காப்பதேயாகும். அவ்வண்ணமே முருகப்பெருமான் அவதாரம் செய்து, சூரபத்மனை அழித்து, அவனை மயிலும் சேவலுமாக்கி, மயிலை வாகனமாகவும், சேவலை கொடியாகவும் ஏற்றுக் கொண்டருளினார்.</string>
    <string name="thiruparakundram_title7">தெய்வயானை திருமணம்</string>
    <string name="thiruparakundram_content7">\t\t\t\t\tதேவர்கள் துயர் களையப் பெற்றார்கள். அதனால் முருகப்பெருமானுக்குத் தன்னுடைய நன்றியைச் செலுத்தும் வகையில் இந்திரன் தன் மகளாகிய தெய்வயானையை திருமணம் செய்து கொடுக்க விரும்பினான். முருகன் - தெய்வானை திருமணம் திருப்பரங்குன்றத்தில் நடந்தது.

திருமண விழாவில் பிரம்மா விவாக காரியங்கள் நிகழ்த்த, சூரிய, சந்திரர்கள் ரத்ன தீபங்கள் தாங்கி நிற்க, பார்வதி பரமேஸ்வரர் பரமானந்தம் எய்தி நிற்க, இந்திரன் தெய்வயானையைத் தாரை வார்த்து கொடுக்க, முருகப்பெருமான், தெய்வயானையைத் திருமணம் செய்து கொண்டதாகத் திருப்பரங்குன்றப் புராணம் கூறுகிறது.</string>
    <string name="tiruchendur_main_content">\t\t\t\t\tமுருகப் பெருமானின் அறுபடை வீடுகளில் 2-வது படை வீடாகத் திகழ்வது திருச்செந்தூர் அருள்மிகு ஸ்ரீ செந்தில் ஆண்டவர் திருக்கோயில். இங்குதான் முருகப் பெருமான் தங்கி தேவ குருவாகிய வியாழ பகவானால் பூசிக்கப்பட்டு பிறகு சூரபத்மனை அழித்தார். போரிலே வெற்றிகண்ட பெருமானை தேவர்கள் இத்தலத்திலேதான் பூசித்தனர். சுகப்பிரம்ம ரிஷி, வெள்ளை யானை இவர்கள் பூசித்துப் பேறு பெற்ற தலம்.
	\n\n
	இத்திருத்தலத்திற்கு செந்தி மாநகர் என்றும், திருச்சீரலைவாய் என்றும் பெயர்கள் உண்டு. இத்தலம் ஓயாமல், கடல் அலைகளால் மோதப்படுவதால் அலைவாய் என்றழைக்கப்படுகிறது. </string>
    <string name="tiruchendur_title1">அமைவிடம்</string>
    <string name="tiruchendur_content1">\t\t\t\t\tதிருநெல்வேலியில் இருந்து கிழக்கே சுமார் 60 கிலோ மீட்டர் தொலைவில் கடற்கரையோரத்தில் அமைந்துள்ளது திருச்செந்தூர். இக்கோயிலானது தூத்துக்குடி மாவட்டத்தின் கீழ் வருகிறது. இத்தலத்திற்கு நேரடியாக மதுரை, திருச்சி, சென்னை, கோவை முதலிய பெருநகரங்களிலிருந்து அரசு விரைவுப் பேருந்துகள் வழியாகச் செல்லலாம். சென்னை-திருநெல்வேலி செல்லும் ரயில் மூலமும் செல்லாம்.
	</string>
    <string name="tiruchendur_title2">திருச்செந்தூர் சிறப்பு  </string>
    <string name="tiruchendur_content2">\t\t\t\t\tதிருசெந்தூரின் புராண வரலாற்றை ஆராய்ந்தால், முருகப்பெருமான் சூரபத்மன் மீது படையெடுத்துப் போரிட வரும்போது, வழியில் எதிர்ப்பட்ட தாரகாசுரனையும், கிரௌஞ்ச மலையையும் அழித்துவிட்டுத் தன் படைகளுடன் வந்து திருச்செந்தூரில் தங்கியதாகவும் அங்கு தேவதச்சனான விஸ்வகர்மனால் அமைக்கப்பட்ட ஆலயத்தில் தங்கி, தேவகுருவாகிய வியாழ பகவானால் பூசிக்கப் பெற்று அசுரர்களின் வரலாற்றினை அறிந்ததாகவும் சொல்லப்படுகிறது.
	</string>
    <string name="tiruchendur_title3">வியாழக்ஷத்திரம்</string>
    <string name="tiruchendur_content3">\t\t\t\t\tவியாழ பகவானால் பூசிக்கப்பட்ட ஸ்தலமாதலின் திருச்செந்தூர் வியாழ nக்ஷத்திரம் என்று போற்றப்படுகிறது. இங்கிருந்துதான் குமரக்கடவுள் வீரவாகுத் தேவரை அனுப்பி, சூரபத்மனுக்கு அறிவுரை கூறி வரச் சொன்னார். வீரவாகு தேவரும் தூதுச் சென்றார். ஆனால், அவரது அறிவுரைகள் சூரபத்மனால் ஏற்கப்படவில்லை. தூது பயனற்றுப் போனது. மேலும் சூரபத்மன் வீரவாகு தேவரை மரியாதை குறைவாக நடத்தி அனுப்பினான்.
	</string>
    <string name="tiruchendur_title4">சூர சம்ஹாரம்</string>
    <string name="tiruchendur_content4">\t\t\t\t\tபிறகு முருகப்பெருமான் இங்கு அம்பிகையிடம் வேல் பெற்று, சூரபத்மன் மீது போர் தொடுக்கச் சென்றார். சூரபத்மன் அப்போது முருகப் பெருமானுடைய எதிரில் மாமரமாக நின்றான். சூரபத்மனை முருகப் பெருமான் தன்னுடைய வேலாயுதத்தால் இரு கூறாகப் பிளந்தார். மனக் கருணையால் அவனை ஆட்கொண்டார்.
	\n\n
	மாமரம் இரண்டாகப் பிளந்தது. பிளந்தவுடனேயே அதன் ஒரு பாதி மயிலாகவும், மறுபாதி சேவலாகவும் மாறியது. மயிலை வாகனமாக அமைத்துக் கொண்டார். சேவலைக் கொடியாக ஏற்றுக்கொண்டார் முருகப்பெருமான்.
	</string>
    <string name="tiruchendur_title5">வெற்றி நகரம்</string>
    <string name="tiruchendur_content5">\t\t\t\t\tஇவ்வாறு சூரபத்மனுடன் போரிட்டு, வெற்றி வாகை சூடி, தேவர்களை சூரபத்மனிடமிருந்து மீட்டு வந்தமையால், திருச்செந்தூர் ஜெயந்திபுரம் என்று வடமொழியால் அழைக்கப்பட்டு வந்தது. அப்பெயரே மருகி செந்தில் என்றாகி, திருச்செந்தூர் என்று வந்திருக்கலாம் என்று கருதப்படுகிறது.
	\n\n
	திருச்செந்தூர் என்ற சொல்லுக்கு புனிதமும் வளமும் மிகுந்த வெற்றி நகரம் என்றும் பொருளுண்டு. செல்வமும் அருள் வளமும் அளிக்க வல்லது திருச்செந்தூர். இத்திருநகரில் முருகப்பெருமான் ஜெயமூர்த்தியாகவே திகழ்கிறார்.
	\n\n
	போரில் அசுரர்களை அழித்த முருகனின் வேலாயுதம் பக்தர்களின் பகையையும் அழித்து வருவதில் ஐயமில்லை.
	</string>
    <string name="tiruchendur_title6">திருமுருகாற்றுப்படை</string>
    <string name="tiruchendur_content6">\t\t\t\t\tஇந்நிகழ்ச்சியை உறுதி செய்யும் வகையில் படித்தோரை பரவசமடையச் செய்யும் திருமுருகாற்றுப்படையில்,
	\n\n
	"வீரவேல் தாரைவேல் விண்ணோர் சிறைமீட்ட
	தீரவேல் செவ்வேள் திருக்கைவேல் - வாரி
	குளித்தவேல் கொற்றவேல் சூர்மார்பும் குன்றும்
	துளைத்தவேல் உண்டே துணை."
	\n\n
	திருச்செந்தூர் குறித்து வழங்கும் பதிகங்களும், புராணங்களும், பிரபந்தங்களும் ஏராளம்.
	\n\n
	"சிக்கலில் வேல்வாங்கிச் செந்தூரில் சூரசம்ஹாரம்" என்பது பழமொழி. மாமரமாய்க் காட்சியளித்த சூரபத்மனைக் கொல்வதற்காக, முருகப் பெருமான் வேலாயுதத்தை ஏவியபோது அதன் கொடூரம் தாங்காமல் கடலும் பின் வாங்கியதாக அருணகிரிநாதர் தனது திருப்புகழில் குறிப்பிடுகின்றார்.
	</string>
	<string name="pooja_timings">பூஜை &amp;       நேரங்கள்

</string>
	<string name="shcedule">தர்சனுக்கான அட்டவணை
</string>
	<string name="poojaiweekly">மண்டல பூஜா
</string>
	<string name="pricetag">விலைப்பட்டியல்
</string>
	<string name="generalnews">பொதுவான செய்தி
</string>
	<string name="phoneno">தொலைபேசி எண்கள்
</string>
	<string name="photo">தூரம் விளக்கப்படம்
</string>
	<string name="transport">சாலை போக்குவரத்து வசதிகள்
</string>
	<string name="medicalhelp">மருத்துவ வசதிகள்
</string>
	<string name="service">சேவைகள் பட்டியல்
</string>
	<string name="structure">கட்டமைப்புகள்
</string>
</resources>