<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liteart.apps.lordiyapan.com.liteart.apps.iyyappan.ArupadaiVeedugalAcivity">
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_arupadai_veedugal"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_2">

    </com.google.android.gms.ads.AdView>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#000"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#ead703"
        android:text="“ஓம் சரவண பவாய நம”"
        />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:layout_marginRight="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:layout_marginTop="20dp"
        android:weightSum="1"

        android:gravity="center" >

        <Button
            android:id="@+id/btn_pooja"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="2.5dp"
            android:layout_weight="0.5"
            android:background="@drawable/shape_arupadai"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:text="@string/pooja_timings"
            android:textColor="#151515"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2.5dp"
            android:layout_weight="2.0"
            android:background="@drawable/shape_arupadai"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:text="@string/shcedule"
            android:textColor="#151515"
            android:textStyle="bold" />
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginLeft="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:layout_marginRight="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:gravity="center"
        >
        <Button
            android:layout_marginRight="2.5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_poojaiweekly"
            android:text="@string/poojaiweekly"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
        <Button
            android:layout_marginLeft="2.5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_pricelist"
            android:text="@string/pricetag"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="2.0"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginLeft="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:layout_marginRight="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:gravity="center"
        >
        <Button
            android:layout_marginRight="2.5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:text="@string/structure"
            android:id="@+id/structure"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
        <Button
            android:layout_marginLeft="2.5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_phoneno"
            android:text="@string/phoneno"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="2.0"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1"
        android:layout_marginLeft="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:layout_marginRight="@dimen/arupadaiveedugal_layout_margin_10dp"
        >
        <Button
            android:layout_marginRight="2.5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_photo"
            android:text="@string/photo"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
        <Button
            android:layout_marginLeft="2.5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_travel"
            android:text="@string/transport"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="2.0"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center"
        android:layout_marginLeft="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:layout_marginRight="@dimen/arupadaiveedugal_layout_margin_10dp"
        >
        <Button
            android:layout_marginRight="2.5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_medicalhelp"
            android:text="@string/medicalhelp"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
        <Button
            android:layout_marginLeft="2.5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_service"
            android:text="@string/service"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="2.0"/>
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center"
        android:layout_marginLeft="@dimen/arupadaiveedugal_layout_margin_10dp"
        android:layout_marginRight="@dimen/arupadaiveedugal_layout_margin_10dp"
        >
        <Button
            android:layout_marginRight="2.5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_generalnews"
            android:text="@string/generalnews"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="0.5"/>
        <Button
            android:layout_marginLeft="2.5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#151515"
            android:textStyle="bold"
            android:background="@drawable/shape_arupadai"
            android:id="@+id/btn_news"
            android:text="செய்தி ஊட்டல்"
            android:padding="@dimen/arupadaiveedugal_padding_10dp"
            android:layout_weight="2.0"/>
    </TableRow>


</TableLayout>
