<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="56dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.liteart.apps.lordiyapan.com.liteart.apps.iyyappan.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/murugan_white"
            android:layout_alignParentTop="true"/>
        <android.support.v4.view.ViewPager
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewPager"/>
    </RelativeLayout>

    <TextView
        android:background="#000"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#ead703"
        android:text="“ சுவாமியே சரணம் ஐயப்பா ”"
         />
   <!-- <Button
        android:id="@+id/btn_arupadaiveedugal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:background="@drawable/arupadaibtn"/>-->
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:id="@+id/btn_arupadaiveedugal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textStyle="bold"
        android:text="சபரிமலை பற்றி"
        android:padding="10dp"/>


    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/videos"
        android:padding="10dp"/>
    <Button
        android:visibility="gone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_kanthapuranam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kantha_puranam"
        android:padding="10dp"/>
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_songs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songs_main_title"
        android:padding="10dp"/>

    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_fm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fm"
        android:padding="10dp"/>
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/main_button_shape"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:padding="10dp"/>
    <com.google.android.gms.ads.AdView
        android:layout_marginTop="5dp"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_main"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_1"/>

</LinearLayout>
    </ScrollView>